--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         <h1 id="title">InfinityDream Website</h1>
+        <a href="./LevelMusicAB/BlankStudio/asset-BlankStudio-music-home.ab">点击下载文件</a>
     </body>
 </html>
